--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,6 @@
   "deno.suggest.imports.hosts": {
     "https://deno.land": true,
     "https://esm.sh": true
-  }
+  },
+  "deno.importMap": "./import_map.json"
 }
